--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,66 @@
 absl-py==2.0.0
+astunparse==1.6.3
 attrs==23.1.0
+certifi==2024.2.2
 cffi==1.16.0
+charset-normalizer==3.3.2
+cmake==3.29.3
 contourpy==1.1.1
 cycler==0.12.1
+defusedxml==0.7.1
+fastjsonschema==2.17.1
 flatbuffers==23.5.26
 fonttools==4.45.1
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.64.0
+h5py==3.11.0
+idna==3.7
 importlib-resources==6.1.1
+keras==3.3.3
 kiwisolver==1.4.5
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.7.4
+mdurl==0.1.2
 mediapipe==0.10.8
+ml-dtypes==0.3.2
+namex==0.0.8
+networkx==3.1
 numpy==1.24.4
+onnx==1.15.0
 opencv-contrib-python==4.8.1.78
 opencv-python==4.8.1.78
-openvino==2023.2.0
+openvino==2024.1.0
+openvino-dev==2024.1.0
 openvino-telemetry==2023.2.1
+opt-einsum==3.3.0
+optree==0.11.0
 packaging==23.2
 Pillow==10.1.0
 protobuf==3.20.3
+psutil==5.9.8
 pycparser==2.21
+Pygments==2.18.0
 pyparsing==3.1.1
 PyQt5==5.15.10
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.13.0
 python-dateutil==2.8.2
+PyYAML==6.0.1
+requests==2.32.2
+rich==13.7.1
 six==1.16.0
 sounddevice==0.4.6
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
+termcolor==2.4.0
+typing_extensions==4.12.0
+urllib3==2.2.1
+Werkzeug==3.0.3
+wrapt==1.16.0
 zipp==3.17.0
